--- a/src/app/Manager/display-mes-postes/display-mes-postes.component.html
+++ b/src/app/Manager/display-mes-postes/display-mes-postes.component.html
@@ -260,7 +260,7 @@
          <!-- Liste des catégories -->
              <div class="card">
                <div class="card-body">
-                 <h4 class="card-title">Liste de mes Postes</h4>
+                 <h4 class="card-title">Liste de mes Demande de Postes</h4>
                  <div class="d-flex justify-content-end mb-3">
                   <!-- Bouton ajouté ici -->
                   <button class="btn btn-inverse-primary" (click)="ToList()"> + Fiche De Poste</button>
