--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -147,22 +147,19 @@
           </a>
         </li>
        
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/managerService/mes-postes']">
-            <i class="mdi mdi mdi-briefcase menu-icon"></i>
-            <span class="menu-title">Fiche de poste</span>
-          </a>
-        </li>
+       
         <li class="nav-item">
           <a class="nav-link" data-bs-toggle="collapse" href="#ui-basic" aria-expanded="false" aria-controls="ui-basic">
-            <i class="mdi mdi-circle-outline menu-icon"></i>
-            <span class="menu-title">UI Elements</span>
+            <i class="mdi mdi mdi-briefcase menu-icon"></i>
+            <span class="menu-title">Fiches de Postes</span>
             <i class="menu-arrow"></i>
           </a>
           <div class="collapse" id="ui-basic">
             <ul class="nav flex-column sub-menu">
-              <li class="nav-item"> <a class="nav-link" href="pages/ui-features/buttons.html">Buttons</a></li>
-              <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Typography</a></li>
+              <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/mes-postes']">Gestion de poste  </a></li>
+              <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/postes-approuve']">Demandes Approuvées</a></li>
+              <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Demandes publiées</a></li>
+
             </ul>
           </div>
         </li>
