--- a/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
@@ -4,11 +4,19 @@
           <div class="poste-details">
             <h2 *ngIf="poste">{{poste.titre}}</h2>
             <h6>Reference du poste : #{{poste.id}}</h6>
+           
         </div>
-        
+        <div class="poste-details">  
     <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
-   
-  
+    <button class="btn btn-inverse-primary"
+    (click)="openModal()"
+            
+            >
+              Ajouter Un Test Technique
+
+            </button>
+          </div>
+
 </div>
 </div>
 </div>
@@ -21,9 +29,9 @@
             <li class="nav-item">
               <a class="nav-link active" id="overview-tab" data-bs-toggle="tab" href="#overview" role="tab" aria-controls="overview" aria-selected="true">Detail du poste</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" id="sales-tab" data-bs-toggle="tab" href="#sales" role="tab" aria-controls="sales" aria-selected="false">Candidats</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" id="sales-tab" data-bs-toggle="tab" href="#sales" role="tab" aria-controls="sales" aria-selected="false">Test Technique</a>
+            </li>
             <!-- <li class="nav-item">
               <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
             </li> -->
@@ -61,7 +69,42 @@
                 </div>
             </div>
             
-         
+            <div class="tab-pane fade" id="sales" role="tabpanel" aria-labelledby="sales-tab">
+              <div class="containers">
+                <br>
+                <br>
+                <div *ngIf="quizzes.length > 0; else noQuizzes">
+                   <ul class="list-unstyled">
+                     <li *ngFor="let quiz of quizzes" class="card mb-3">
+                       <div class="card-body">
+                         <h3 class="card-title">{{ quiz.title }}</h3>
+                         <p class="card-text">Description: {{ quiz.description }}</p>
+                         <p class="card-text">Max Marks: {{ quiz.maxMarks }}</p>
+                         <p class="card-text">Total Questions: {{ quiz.numberOfQuestions }}</p>
+                         <div class="d-flex justify-content-end">
+                           <button class="btn btn-inverse-success" [routerLink]="'/managerService/view-question/' + quiz.qid + '/' + quiz.title">
+                            <i class="mdi mdi-comment-question-outline
+                            "> </i>                           </button>
+                           &nbsp;
+
+                           <button class="btn btn-inverse-primary" (click)="ToEdit(quiz.qid)"> <i class="mdi mdi-grease-pencil
+                            "> </i></button>
+                            &nbsp;
+                           <button class="btn btn-inverse-danger" (click)="deleteQuiz(quiz.qid)">      <i class="mdi mdi-delete
+                            "></i>
+                           </button>
+                         </div>
+                       </div>
+                     </li>
+                   </ul>
+                </div>
+                <ng-template #noQuizzes>
+                   <p>No quizzes found for this post.</p>
+                </ng-template>
+               </div>
+               
+              
+          </div>
             
           </div>
         </div>
