--- a/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.css
+++ b/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.css
@@ -195,7 +195,6 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-/* CSS pour changer le curseur en not-allowed pour les boutons désactivés */
 
  .profile-info {
   display: flex;
@@ -207,5 +206,30 @@ body {
   transform: translateY(-5px);
  }
  
-
+ /* Buttons */
+ .btn {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+ }
+ 
+ .btn-success {
+  background-color: #4caf50;
+  color: #fff;
+ }
+ 
+ .btn-success:hover {
+  background-color: #45a049;
+ }
+ 
+ .btn-danger {
+  background-color: #f44336;
+  color: #fff;
+ }
+ 
+ .btn-danger:hover {
+  background-color: #da190b;
+ }
  
