--- a/src/app/menu/manager-menu/manager-menu.component.html
+++ b/src/app/menu/manager-menu/manager-menu.component.html
@@ -158,7 +158,7 @@
             <ul class="nav flex-column sub-menu">
               <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/mes-postes']">Gestion de poste  </a></li>
               <li class="nav-item"> <a class="nav-link" [routerLink]="['/managerService/postes-approuve']">Demandes Approuvées</a></li>
-              <li class="nav-item"> <a class="nav-link" href="pages/ui-features/typography.html">Demandes publiées</a></li>
+              <li class="nav-item"> <a class="nav-link"  [routerLink]="['/managerService/poste-publie']">Demandes publiées</a></li>
 
             </ul>
           </div>
