--- a/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostApprouvedId/post-approuved-id/post-approuved-id.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="poste-details">  
     <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
-    <button class="btn btn-inverse-primary"(click)="openModal()" >
+    <button class="btn btn-inverse-primary"(click)="openModal(poste.id)" >
       Ajouter Un Test Technique</button>
     
           </div>
