--- a/src/app/Manager/quizQuestions/view-question/view-question.component.html
+++ b/src/app/Manager/quizQuestions/view-question/view-question.component.html
@@ -7,7 +7,7 @@
       <div >
         <button
         class="btn btn-inverse-info"
-      (click)="openModal()"
+      (click)="openModal(qid)"
         >
          + Ajouter Une Question 
         </button>
