--- a/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.html
+++ b/src/app/Manager/display-mes-postes/PostEncours/post-by-id/post-by-id.component.html
@@ -8,7 +8,39 @@
       
   <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
  
-  
+  <div class="row">
+     <!-- Première carte de tableau de bord -->
+     <div class="col-md-4">
+      <div class="card pending">
+        <div class="card-body">
+          <h5 class="card-title" style="color: white;">Dans le pipeline</h5>
+          <p class="card-text" style="color: white;">{{ collaborateursEnAttente }}</p>
+        </div>
+      </div>
+    </div>
+    
+     <div class="col-md-4">
+       <div class="card accepted">
+         <div class="card-body">
+           <h5 class="card-title" style="color: white;">Accepté</h5>
+           <p class="card-text" style="color: white;">{{ collaborateursAcceptees }}</p>
+         </div>
+       </div>
+     </div>
+ 
+     <!-- Deuxième carte de tableau de bord -->
+    
+ 
+     <!-- Troisième carte de tableau de bord -->
+     <div class="col-md-4">
+       <div class="card rejected">
+         <div class="card-body">
+           <h5 class="card-title" style="color: white;">Refusé</h5>
+           <p class="card-text" style="color: white;"> {{ collaborateursRefusees }}</p>
+         </div>
+       </div>
+     </div>
+  </div>
 </div>
 </div>
 </div>
@@ -21,7 +53,12 @@
           <li class="nav-item">
             <a class="nav-link active" id="overview-tab" data-bs-toggle="tab" href="#overview" role="tab" aria-controls="overview" aria-selected="true">Detail du poste</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link" id="sales-tab" data-bs-toggle="tab" href="#sales" role="tab" aria-controls="sales" aria-selected="false">Candidats</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
+          </li>
         </ul>
         <div class="tab-content py-0 px-0">
           <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
@@ -56,7 +93,142 @@
               </div>
           </div>
           
-         
+          <div class="tab-pane fade" id="sales" role="tabpanel" aria-labelledby="sales-tab">
+            <br>
+            <h4 class="justify-content-center">Liste des candidats</h4>
+            <input type="text" class="form-control" [(ngModel)]="searchTerm" placeholder="Rechercher un candidat..." (input)="filterCandidats()" >
+<br>
+              <table  class="table table-striped" *ngIf="candidats.length  > 0">
+                  <thead>
+                    <tr>
+                      <th>Nom</th>
+                      <th>Prénom</th>
+                      <th>Email</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr *ngFor="let candidat of filteredPostes">
+                      <td>{{ candidat.nom }}</td>
+                      <td>{{ candidat.prenom }}</td>
+                      <td>{{ candidat.email }}</td>
+                     <td>
+                      <button (click)="openModal(candidat.id)" type="button" class="btn btn-inverse-info btn-icon">
+                        <i class="mdi mdi mdi-eye"></i>
+                      </button> 
+                     </td>
+                    </tr>
+                  </tbody>
+                </table>
+                
+                <div *ngIf="candidats.length === 0">
+                  <p>Aucun candidat trouvé pour ce poste.</p>
+                </div>
+                
+                            </div>
+          <div class="tab-pane fade" id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
+         <!-- app.component.html -->
+        
+<!-- app.component.html -->
+<div class="kanban-board" cdKDropListGroup>
+<!-- Colonne En attente -->
+<div class="kanban-column"  style="  border-top: 5px solid #edf127;
+" cdkDropList [cdkDropListData]="candidatures" id="EN_ATTENTE" (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE')" [cdkDropListConnectedTo]="['Preselection', 'REFUSEE']">
+  <h3>Nouveaux Candidats</h3>
+  <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'EN_ATTENTE'" cdkDrag [id]="candidature.candidature_id">
+    <div class="kanban-card">
+      <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+      <div class="profile-info">
+         {{ candidature.nom }} {{ candidature.prenom }} 
+      </div>
+            <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+              <i class="mdi mdi mdi-eye      "></i>
+            </button>
+
+     </div>
+
+  </div>
+</div>
+  <!-- Colonne Preselection -->
+<div class="kanban-column"  style="  border-top: 5px solid #b38935;
+" cdkDropList [cdkDropListData]="candidatures" id="Preselection" (cdkDropListDropped)="onDrop($event, 'Preselection')" [cdkDropListConnectedTo]="['Entretien','ACCEPTEE', 'REFUSEE']">
+  <h3>Pre-selection</h3>
+  <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'Preselection'" cdkDrag [id]="candidature.candidature_id">
+    <div class="kanban-card">
+      <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+      <div class="profile-info">
+         {{ candidature.nom }} {{ candidature.prenom }} 
+      </div>
+            <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+              <i class="mdi mdi mdi-eye      "></i>
+            </button>
+
+     </div>
+
+  </div>
+</div>
+<!--Colonne  Entretien -->
+<div class="kanban-column"  style="  border-top: 5px solid #68065d;
+" cdkDropList [cdkDropListData]="candidatures" id="Entretien" (cdkDropListDropped)="onDrop($event, 'Entretien')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
+  <h3>Entretien</h3>
+  <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'Entretien'" cdkDrag [id]="candidature.candidature_id">
+    <div class="kanban-card">
+      <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+      <div class="profile-info">
+         {{ candidature.nom }} {{ candidature.prenom }} 
+      </div>
+            <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+              <i class="mdi mdi mdi-eye      "></i>
+            </button>
+
+     </div>
+
+  </div>
+</div>
+<!-- Colonne Acceptées -->
+<div class="kanban-column" style="  border-top: 5px solid #8BC34A;
+" cdkDropList [cdkDropListData]="candidatures" id="ACCEPTEE" (cdkDropListDropped)="onDrop($event, 'ACCEPTEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'REFUSEE']">
+  <h3>Acceptés</h3>
+  <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'ACCEPTEE'" cdkDrag [id]="candidature.candidature_id">
+    <div class="kanban-card">
+      <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+      <div class="profile-info">
+         {{ candidature.nom }} {{ candidature.prenom }} 
+      </div>
+            <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+              <i class="mdi mdi mdi-eye "></i>
+            </button>
+
+     </div>
+     
+  </div>
+</div>
+
+<!-- Colonne Refusées -->
+<div class="kanban-column" style="  border-top: 5px solid #b72d2d;
+" cdkDropList [cdkDropListData]="candidatures" id="REFUSEE" (cdkDropListDropped)="onDrop($event, 'REFUSEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']">
+  <h3>Refusés</h3>
+  <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'REFUSEE'" cdkDrag [id]="candidature.candidature_id">
+    <div class="kanban-card">
+      <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+      <div class="profile-info">
+         {{ candidature.nom }} {{ candidature.prenom }}
+      </div>
+            <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+              <i class="mdi mdi mdi-eye      "></i>
+            </button>
+
+     </div>
+   
+  </div>
+</div>
+</div>
+
+
+
+       
+            
+                           
+          </div>
         </div>
       </div>
     </div>
