--- a/src/app/Admin/Poste/getpostebyid/getpostebyid.component.html
+++ b/src/app/Admin/Poste/getpostebyid/getpostebyid.component.html
@@ -4,7 +4,8 @@
           <div class="poste-details">
             <h2 *ngIf="poste">{{poste.titre}}</h2>
             <h6>Reference du poste : #{{poste.id}}</h6>
-        </div>
+            <button (click)="redirectToFullCalendar(postId)">Full Calendar</button>
+          </div>
         
     <h6>Nombre de poste ouverts : {{poste.nombrePostesDisponibles}} </h6>
    
@@ -58,6 +59,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#purchases" role="tab" aria-controls="purchases" aria-selected="false">Pipeline Candidat</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="purchases-tab" data-bs-toggle="tab" href="#full-calendar" role="tab" aria-controls="full-calendar" aria-selected="false">Full Calendar</a>
             </li>
           </ul>
           <div class="tab-content py-0 px-0">
@@ -125,91 +129,116 @@
                   </div>
                   
                               </div>
-            <div class="tab-pane fade" id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
-           <!-- app.component.html -->
-          
-<!-- app.component.html -->
-<div class="kanban-board" cdKDropListGroup>
-  <!-- Colonne En attente -->
-  <div class="kanban-column"  style="  border-top: 5px solid #edf127;
-  " cdkDropList [cdkDropListData]="candidatures" id="EN_ATTENTE" (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE')" [cdkDropListConnectedTo]="['Preselection', 'REFUSEE']">
-    <h3>Nouveaux Candidats</h3>
-    <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'EN_ATTENTE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">
-        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
-        <div class="profile-info">
-           {{ candidature.nom }} {{ candidature.prenom }} 
-        </div>
-              <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
-                <i class="mdi mdi mdi-eye      "></i>
-              </button>
+                              <div class="tab-pane fade" id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
+                                <!-- app.component.html -->
+                               
+                     <!-- app.component.html -->
+                     <div class="kanban-board" cdKDropListGroup>
+                       <!-- Colonne En attente -->
+                       <div class="kanban-column"  style="  border-top: 5px solid #edf127;
+                       " cdkDropList [cdkDropListData]="candidatures" id="EN_ATTENTE" (cdkDropListDropped)="onDrop($event, 'EN_ATTENTE')" [cdkDropListConnectedTo]="['Preselection', 'REFUSEE']">
+                         <h3>Nouveaux Candidats</h3>
+                         <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'EN_ATTENTE'" cdkDrag [id]="candidature.candidature_id">
+                           <div class="kanban-card">
+                             <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+                             <div class="profile-info">
+                                {{ candidature.nom }} {{ candidature.prenom }} 
+                             </div>
+                                   <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+                                     <i class="mdi mdi mdi-eye      "></i>
+                                   </button>
+                     
+                            </div>
+                     
+                         </div>
+                       </div>
+                         <!-- Colonne Preselection -->
+                       <div class="kanban-column"  style="  border-top: 5px solid #b38935;
+                       " cdkDropList [cdkDropListData]="candidatures" id="Preselection" (cdkDropListDropped)="onDrop($event, 'Preselection')" [cdkDropListConnectedTo]="['Entretien','ACCEPTEE', 'REFUSEE']">
+                         <h3>Pre-selection</h3>
+                         <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'Preselection'" cdkDrag [id]="candidature.candidature_id">
+                           <div class="kanban-card">
+                             <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+                             <div class="profile-info">
+                                {{ candidature.nom }} {{ candidature.prenom }} 
+                             </div>
+                                   <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+                                     <i class="mdi mdi mdi-eye      "></i>
+                                   </button>
+                     
+                            </div>
+                     
+                         </div>
+                       </div>
+                       <!--Colonne  Entretien -->
+                       <div class="kanban-column"  style="  border-top: 5px solid #68065d;
+                       " cdkDropList [cdkDropListData]="candidatures" id="Entretien" (cdkDropListDropped)="onDrop($event, 'Entretien')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
+                         <h3>Entretien</h3>
+                         <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'Entretien'" cdkDrag [id]="candidature.candidature_id">
+                           <div class="kanban-card">
+                             <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+                             <div class="profile-info">
+                                {{ candidature.nom }} {{ candidature.prenom }} 
+                             </div>
+                                   <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+                                     <i class="mdi mdi mdi-eye      "></i>
+                                   </button>
+                     
+                            </div>
+                     
+                         </div>
+                       </div>
+                       <!-- Colonne Acceptées -->
+                       <div class="kanban-column" style="  border-top: 5px solid #8BC34A;
+                       " cdkDropList [cdkDropListData]="candidatures" id="ACCEPTEE" (cdkDropListDropped)="onDrop($event, 'ACCEPTEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'REFUSEE']">
+                         <h3>Acceptés</h3>
+                         <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'ACCEPTEE'" cdkDrag [id]="candidature.candidature_id">
+                           <div class="kanban-card">
+                             <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+                             <div class="profile-info">
+                                {{ candidature.nom }} {{ candidature.prenom }} 
+                             </div>
+                                   <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+                                     <i class="mdi mdi mdi-eye "></i>
+                                   </button>
+                     
+                            </div>
+                            
+                         </div>
+                       </div>
+                     
+                       <!-- Colonne Refusées -->
+                       <div class="kanban-column" style="  border-top: 5px solid #b72d2d;
+                       " cdkDropList [cdkDropListData]="candidatures" id="REFUSEE" (cdkDropListDropped)="onDrop($event, 'REFUSEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']">
+                         <h3>Refusés</h3>
+                         <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'REFUSEE'" cdkDrag [id]="candidature.candidature_id">
+                           <div class="kanban-card">
+                             <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
+                             <div class="profile-info">
+                                {{ candidature.nom }} {{ candidature.prenom }}
+                             </div>
+                                   <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
+                                     <i class="mdi mdi mdi-eye      "></i>
+                                   </button>
+                     
+                            </div>
+                          
+                         </div>
+                       </div>
+                     </div>
+                     
+                     
+                     
+                              
+                                   
+                                                  
+                                 </div>
+                                 <div class="tab-pane fade" id="full-calendar" role="tabpanel" aria-labelledby="full-calendar-tab">
+                                    <full-calendar [options]="calendarOptions"></full-calendar>    
+                                                             </div>
+                               
 
-       </div>
 
-    </div>
-  </div>
-  <div class="kanban-column"  style="  border-top: 5px solid #edf127;
-  " cdkDropList [cdkDropListData]="candidatures" id="Preselection" (cdkDropListDropped)="onDrop($event, 'Preselection')" [cdkDropListConnectedTo]="['ACCEPTEE', 'REFUSEE']">
-    <h3>Pre-selection</h3>
-    <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'Preselection'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">
-        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
-        <div class="profile-info">
-           {{ candidature.nom }} {{ candidature.prenom }} 
-        </div>
-              <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
-                <i class="mdi mdi mdi-eye      "></i>
-              </button>
-
-       </div>
-
-    </div>
-  </div>
-  <!-- Colonne Acceptées -->
-  <div class="kanban-column" style="  border-top: 5px solid #8BC34A;
-  " cdkDropList [cdkDropListData]="candidatures" id="ACCEPTEE" (cdkDropListDropped)="onDrop($event, 'ACCEPTEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'REFUSEE']">
-    <h3>Acceptés</h3>
-    <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'ACCEPTEE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">
-        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
-        <div class="profile-info">
-           {{ candidature.nom }} {{ candidature.prenom }} 
-        </div>
-              <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
-                <i class="mdi mdi mdi-eye "></i>
-              </button>
-
-       </div>
-       
-    </div>
-  </div>
-
-  <!-- Colonne Refusées -->
-  <div class="kanban-column" style="  border-top: 5px solid #b72d2d;
-  " cdkDropList [cdkDropListData]="candidatures" id="REFUSEE" (cdkDropListDropped)="onDrop($event, 'REFUSEE')" [cdkDropListConnectedTo]="['EN_ATTENTE', 'ACCEPTEE']">
-    <h3>Refusés</h3>
-    <div class="kanban-cards" *ngFor="let candidature of candidatures | filter:'REFUSEE'" cdkDrag [id]="candidature.candidature_id">
-      <div class="kanban-card">
-        <img class="profile-image rounded-circle" [src]="'assets/images/' + candidature.image" alt="Profile Image">
-        <div class="profile-info">
-           {{ candidature.nom }} {{ candidature.prenom }}
-        </div>
-              <button (click)="openModal(candidature.collaborateur_id)" class="btn btn-inverse-secondary btn-icon">
-                <i class="mdi mdi mdi-eye      "></i>
-              </button>
-
-       </div>
-     
-    </div>
-  </div>
-</div>
-
-
-
-         
-              
-                             
-            </div>
           </div>
         </div>
       </div>
