--- a/src/app/Admin/Poste/getpostebyid/full-calendar/full-calendar.component.html
+++ b/src/app/Admin/Poste/getpostebyid/full-calendar/full-calendar.component.html
@@ -10,7 +10,7 @@
         <div class="modal-content">
           <span class="close" (click)="closeModal()">&times;</span>
           <h2>Détails de l'entretien</h2>
-          <div *ngIf="entretienDetails">
+          <div *ngIf="entretienDetails && !editMode">
             <p><strong>ID:</strong> {{ entretienDetails.entretien.id }}</p>
             <p>
               <strong>Candidat:</strong>
@@ -35,10 +35,58 @@
             </p>
             <!-- Ajoutez d'autres détails de l'entretien au besoin -->
           </div>
+          <button (click)="updateEntretien(entretienDetails.entretien.id)">
+            Modifier
+          </button>
           <button (click)="deleteEntretien(entretienDetails.entretien.id)">
             Supprimer
           </button>
-
+          <div *ngIf="editMode">
+            <form (submit)="submitUpdatedEntretien(entretienDetails.entretien.id)">
+              <div>
+                <label for="candidatureId">ID de la candidature:</label>
+                <input
+                  type="number"
+                  id="candidatureId"
+                  name="candidatureId"
+                  [(ngModel)]="candidatureId"
+                  required
+                />
+              </div>
+              <div>
+                <label for="dateEntretien">Date de l'entretien:</label>
+                <input
+                  type="date"
+                  id="dateEntretien"
+                  name="dateEntretien"
+                  [(ngModel)]="dateEntretien"
+                  required
+                />
+              </div>
+              <div>
+                <label for="heureDebut">Heure de début:</label>
+                <input
+                  type="time"
+                  id="heureDebut"
+                  name="heureDebut"
+                  [(ngModel)]="heureDebut"
+                  required
+                />
+              </div>
+              <div>
+                <label for="heureFin">Heure de fin:</label>
+                <input
+                  type="time"
+                  id="heureFin"
+                  name="heureFin"
+                  [(ngModel)]="heureFin"
+                  required
+                />
+              </div>
+              <button type="submit">Enregistrer</button>
+              <button type="button" (click)="editMode = false">Annuler</button>
+            </form>
+          </div>
           <button (click)="closeModal()">Fermer</button>
         </div>
       </div>
